# flask-sqlalchemy

./: .azure-pipelines.yml  .coveragerc  .flake8  .gitignore  .pdm-python  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  AUTHORS  CHANGES  CHANGES.rst  CODE_OF_CONDUCT.md  CONTRIBUTING.rst  LICENSE  MANIFEST.in  Makefile  README  README.md  README.rst  flask_sqlalchemy.py  pyproject.toml  setup.cfg  setup.py  test_sqlalchemy.py  tox.ini
.github/: ISSUE_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.md  config.yml  feature-request.md
.github/workflows/: lock.yaml  publish.yaml  tests.yaml
docs/: Makefile  api.rst  binds.rst  conf.py  config.rst  contents.rst.inc  contexts.rst  customizing.rst  index.rst  install.rst  legacy-query.rst  legacy-quickstart.rst  make.bat  models.rst  pagination.rst  queries.rst  quickstart.rst  record-queries.rst  requirements.txt  signals.rst  track-modifications.rst
docs/_templates/: sidebarintro.html  sidebarlogo.html
examples/: hello.cfg  hello.py
examples/flaskr/: .gitignore  MANIFEST.in  README.rst  setup.cfg
examples/flaskr/flaskr/: __init__.py  auth.py  blog.py  models.py
examples/flaskr/flaskr/auth/: __init__.py  models.py  views.py
examples/flaskr/flaskr/blog/: __init__.py  models.py  views.py
examples/flaskr/flaskr/blueprints/: auth.py  blog.py  command.py
examples/flaskr/flaskr/templates/: base.html
examples/flaskr/flaskr/templates/blog/: index.html  update.html
examples/flaskr/tests/: conftest.py  test_auth.py  test_blog.py  test_init.py
examples/hello/: hello.py
examples/hello/templates/: show_all.html
examples/templates/: layout.html  new.html
examples/todo/: app.py
examples/todo/templates/: layout.html  new.html  show_all.html
flask_sqlalchemy/: __init__.py  _compat.py  cli.py  model.py  utils.py  version.py
flaskext/: sqlalchemy.py
requirements/: dev.in  dev.txt  docs.in  docs.txt  mypy.in  mypy.txt  tests-min.in  tests-min.txt  tests.in  tests.txt  typing.in  typing.txt
requirements-skip/: README.md  tests-min.in  tests-min.txt
scripts/: make-release.py
src/flask_sqlalchemy/: __init__.py  cli.py  extension.py  model.py  pagination.py  query.py  record_queries.py  session.py  table.py  track_modifications.py
tests/: conftest.py  test_basic_app.py  test_binds.py  test_cli.py  test_commit_on_teardown.py  test_config.py  test_custom_engine_params.py  test_custom_session.py  test_engine.py  test_extension_class.py  test_extension_object.py  test_extension_repr.py  test_legacy_query.py  test_meta_data.py  test_metadata.py  test_model.py  test_model_bind.py  test_model_class.py  test_model_name.py  test_pagination.py  test_query.py  test_query_class.py  test_query_property.py  test_record_queries.py  test_regressions.py  test_scoped_teardown.py  test_session.py  test_sessions.py  test_signals.py  test_sqlalchemy_includes.py  test_table_bind.py  test_table_name.py  test_track_modifications.py  test_transaction_context_manager.py  test_utils.py  test_view_query.py
