[metadata]
license_file = LICENSE.rst

[bdist_wheel]
universal = true

[tool:pytest]
testpaths = tests

[coverage:run]
branch = True
source =
    flask_sqlalchemy
    tests

[coverage:paths]
source =
    flask_sqlalchemy
    .tox/*/lib/python*/site-packages/flask_sqlalchemy
    .tox/*/site-packages/flask_sqlalchemy
