[metadata]
name = Flask-SQLAlchemy
# Version needs regex in setup.py.
url = https://github.com/pallets/flask-sqlalchemy
project_urls =
    Documentation = https://flask-sqlalchemy.palletsprojects.com/
    Code = https://github.com/pallets/flask-sqlalchemy
    Issue tracker = https://github.com/pallets/flask-sqlalchemy/issues
license = BSD-3-Clause
license_files = LICENSE.rst
maintainer = Pallets
maintainer_email = contact@palletsprojects.com
description = Add SQLAlchemy support to your Flask application.
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
packages = find:
package_dir = = src
include_package_data = true
python_requires = >= 3.6
# Dependencies are in setup.py for GitHub's dependency graph.

[options.packages.find]
where = src

[bdist_wheel]
universal = true

[tool:pytest]
testpaths = tests

[coverage:run]
branch = true
source =
    flask_sqlalchemy
    tests

[coverage:paths]
source =
    src
    */site-packages
