[metadata]
name = Flask-SQLAlchemy
version = attr: flask_sqlalchemy.__version__
url = https://flask-sqlalchemy.palletsprojects.com/
project_urls =
    Donate = https://palletsprojects.com/donate
    Documentation = https://flask-sqlalchemy.palletsprojects.com/
    Changes = https://flask-sqlalchemy.palletsprojects.com/changes/
    Source Code = https://github.com/pallets/flask-sqlalchemy/
    Issue Tracker = https://github.com/pallets/flask-sqlalchemy/issues/
    Twitter = https://twitter.com/PalletsTeam
    Chat = https://discord.gg/pallets
license = BSD-3-Clause
license_files = LICENSE.rst
author = Armin Ronacher
author_email = armin.ronacher@active-4.com
maintainer = Pallets
maintainer_email = contact@palletsprojects.com
description = Add SQLAlchemy support to your Flask application.
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
packages = find:
package_dir = = src
include_package_data = true
python_requires = >= 3.6
# Dependencies are in setup.py for GitHub's dependency graph.

[options.packages.find]
where = src

[bdist_wheel]
universal = true

[tool:pytest]
testpaths = tests

[coverage:run]
branch = true
source =
    flask_sqlalchemy
    tests

[coverage:paths]
source =
    src
    */site-packages

[flake8]
# B = bugbear
# E = pycodestyle errors
# F = flake8 pyflakes
# W = pycodestyle warnings
# B9 = bugbear opinions
# ISC = implicit-str-concat
select = B, E, F, W, B9, ISC
ignore =
    # slice notation whitespace, invalid
    E203
    # line length, handled by bugbear B950
    E501
    # bare except, handled by bugbear B001
    E722
    # bin op line break, invalid
    W503
# up to 88 allowed by bugbear B950
max-line-length = 80
