[metadata]
name = flaskr
version = attr: flaskr.__version__
url = https://flask-sqlalchemy.palletsprojects.com/
author = Pallets
author_email = contact@palletsprojects.com
license = BSD-3-Clause
license_file = LICENSE.rst
description = A basic blog app built with Flask-SQLAlchemy.
long_description = file: README.rst

[options]
packages = find:
include_package_data = true
python_requires = >= 3.6
install_requires =
    Flask
    Flask-SQLAlchemy

[options.extras_require]
test =
    pytest
    coverage

[tool:pytest]
testpaths = tests

[coverage:run]
branch = True
source = flaskr
